@@ -3,6 +3,7 @@
 *eix-0.32.7
 	Martin Väth <martin at mvath.de>:
 	- internal: provide and use eix::array instead of hacks
+	- internal: provide rudimentary eix::forward_list if necessary
 	- internal: use std::.. for documented functions from #include <c...>
 	- internal: remove UNUSED hackery
 	- contrib/make.sh: Improve clang filtering
